<resources>
    <string name="app_name">City Guide</string>
    <string name="logo_name">Get A Way</string>
    <string name="slogan_name">We will help you to find your way!</string>
    <string name="powered_by">Powered by Simmular</string>


    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don"t have to worry about anything.  </string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>


    <!--    Title And Description-->
    <string name="feature_locations_description">All the location that are featured and have the top demand in town!</string>
    <string name="feature_locations">All Feature Locations</string>
    <string name="most_viewed_locations">Most viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="search_text">Search..</string>

    <!--    Get away menu-->
    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="education">Education</string>
    <string name="shops">Shops</string>

    <!--      Menu Names      -->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <!--    Profile-->
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <!--    Categories-->
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="bank">Bank</string>

    <string name="expand_all">EXPAND ALL</string>
    <string name="car_rent">Car Rent</string>
    <string name="hospital">Hospital</string>
    <string name="shop">Shop</string>
    <string name="all_shop">All Shops</string>

    <!--    General Strings -->
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="enter_pass">Enter Password</string>
    <string name="retailer_heading">Grow\nYour Business</string>
    <string name="retailer_tag_line">We will help you to grow business using online services!</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How We Work?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_pass">Forget Password</string>

    // Verification OTP
    <string name="todo">Close</string>
    <string name="verify_code">Verify Code</string>
    <string name="otp_code_text">CO\nDE</string>
    <string name="otp_verification_text">VERIFICATION</string>
    <string name="otp_description_text">Enter one time password sent on</string>

    //Forget password
    <string name="forget_password_details">Provide your account\'s email for which \n you want to reset your password!</string>
    <string name="make_selection_details">Select which contact detail should we use reset your password?</string>
    <string name="new_credentials_details">Your identify has been verified!\nSet your new password</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="your_password_updated">Your password has been updated!</string>
</resources>