<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_dashboard_color"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_color"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_all_categories"
            android:icon="@drawable/ic_categories_color"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/nav_missing_place"
            android:icon="@drawable/ic_place_color"
            android:title="@string/add_missing_place" />

    </group>

    <item android:title="Profile">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login_color"
                    android:title="@string/login" />
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile_color"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout_color"
                    android:title="@string/logout" />

            </group>
        </menu>

    </item>
    <item android:title="Categories">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_retaurants"
                    android:icon="@drawable/ic_food_store"
                    android:title="@string/restaurants" />
                <item
                    android:id="@+id/nav_bank"
                    android:icon="@drawable/ic_credit_card"
                    android:title="@string/bank" />
                <item
                    android:id="@+id/nav_education"
                    android:icon="@drawable/ic_education_color"
                    android:title="@string/education" />
                <item
                    android:id="@+id/nav_shop"
                    android:icon="@drawable/ic_shops_color"
                    android:title="@string/shops" />

            </group>
        </menu>

    </item>
    <item android:title="Share">

        <menu>
            <group android:checkableBehavior="none">

                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share_color"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/ic_rate_us"
                    android:title="@string/rate_us" />

            </group>
        </menu>

    </item>
</menu>