<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    android:background="@color/white"
    tools:context=".Common.LoginSignup.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:padding="5dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_password"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FORGET PASSWORD"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/multidisplay_bold"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password_details"
            android:textSize="14sp"
            android:fontFamily="@font/muli_semibold"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forget_password_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/country_code_picker"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxBackgroundColor="@color/lightWhite"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/muli_semibold"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textCursorDrawable="@null" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forget_password_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forget_password_phone_number"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="verifyPhoneNumber"
            android:text="@string/next_btn"
            android:textColor="@color/black" />

    </LinearLayout>

</ScrollView>